--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
     <title>Tristen Hobba's Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- nav -->
+    <nav>
+      <div class="title">
+        <h1>Tristen Hobba</h1>
+      </div>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+        <li><a href="./Resume/index.html">Resume</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
