added hero section, styled hero section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
         <li><a href="./Resume/index.html">Resume</a></li>
       </ul>
     </nav>
+    <!-- hero -->
+    <div class="hero">
+      <img
+        class="profile"
+        src="./images/profile.jpg"
+        alt="A profile picture of Tristen Hobba with headphones on"
+      />
+      <div class="subtitle"><h2>Tristen Hobba</h2></div>
+    </div>
   </body>
 </html>
