added article sections, img styles

--- a/index.html
+++ b/index.html
@@ -29,5 +29,59 @@
       />
       <div class="subtitle"><h2>Tristen Hobba</h2></div>
     </div>
+    <!-- article-1 -->
+    <article class="box box-1">
+      <div class="heading">
+        <h2>My Menu</h2>
+        <p>CSS JavaScript</p>
+      </div>
+      <a href="./my-restaurant-menu/index.html">
+        <img class="main" src="./images/my menu.png" alt="A fictional menu app"
+      /></a>
+    </article>
+    <!-- end article-1 -->
+    <!-- article-2 -->
+    <article class="box box-2">
+      <div class="heading">
+        <h2>Color Changer</h2>
+        <p>CSS javaScript</p>
+      </div>
+      <a href="./colorChanger/index.html"
+        ><img src="./images/color-changer.png" alt="color changing app" />
+      </a>
+    </article>
+    <!-- end article-2 -->
+    <!-- article-3 -->
+    <article class="box box-3">
+      <div class="heading">
+        <h2>Counter</h2>
+        <p>CSS JavaScript</p>
+      </div>
+      <a href="./counter/index.html">
+        <img src="./images/counter.png" alt="A counting app"
+      /></a>
+    </article>
+    <!-- end article-3 -->
+    <!-- article-4 -->
+    <article class="box box-4">
+      <div class="heading">
+        <h2>Love Calculator</h2>
+        <p>CSS javaScript</p>
+      </div>
+      <a href="./love-Calculator/index.html"
+        ><img src="./images/love calculator.png" alt="A love calculator app" />
+      </a>
+    </article>
+    <!-- end article-4 -->
+    <!-- article-5 -->
+    <article class="box box-5">
+      <div class="heading">
+        <h2>Coming Soon</h2>
+        <p>CSS javaScript</p>
+      </div>
+      <a href="#">
+        <img src="./images/red-coming-soon.jpg" alt="coming soon red neon sign"
+      /></a>
+    </article>
   </body>
 </html>
