added about me section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,28 @@
       />
       <div class="subtitle"><h2>Tristen Hobba</h2></div>
     </div>
+    <!-- about -->
+    <h2 class="aboutMe">About me</h2>
+    <div id="about" class="about">
+        <p>
+          Welcome to my profile! I am currently enrolled in the coding bootcamp
+          at Sydney University Online, pursuing a career change and acquiring
+          new skills. My goal is to become more productive and make the most of
+          my time compared to my previous experiences. Through this program, I
+          can enjoy a structured learning environment and enhance my coding
+          abilities.
+        </p>
+        <p>
+          Since December 2022, I have been self-teaching myself how to code.
+          However, I decided to join this course to further refine my knowledge
+          and skills in a more organized manner.
+        </p>
+        <p>
+          During my free time, when I manage to find some, I love to go camping
+          with my brothers. Nature fascinates me, and I often embark on
+          refreshing bush walks, appreciating the beauty of the outdoors.
+        </p>
+      </div>
     <!-- article-1 -->
     <article class="box box-1">
       <div class="heading">
@@ -80,8 +102,25 @@
         <p>CSS javaScript</p>
       </div>
       <a href="#">
-        <img src="./images/red-coming-soon.jpg" alt="coming soon red neon sign"
+        <img src="./images/coming soon.jpg" alt="coming soon red neon sign"
       /></a>
     </article>
+     <!-- footer -->
+     <h4>Contact Me</h4>
+    </section>
+      <footer>
+        <div id="contact" class="contact">
+        </div>
+        <ul>
+          <li>
+            <a
+              href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit"
+              >linkedIn</a
+            >
+          </li>
+          <li><a href="https://github.com/Tristenh">GitHub</a></li>
+          <li><a href="mailto:tristenhobba1@gmail.com">Email</a></li>
+        </ul>
+      </footer>
   </body>
 </html>
