added CSS grid, styled grid, added media queries

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       />
       <div class="subtitle"><h2>Tristen Hobba</h2></div>
     </div>
-    <!-- about -->
-    <h2 class="aboutMe">About me</h2>
-    <div id="about" class="about">
+    <!-- about me -->
+    <section class="grid-control">
+      <h2 class="aboutMe">About me</h2>
+      <div id="about" class="about">
         <p>
           Welcome to my profile! I am currently enrolled in the coding bootcamp
           at Sydney University Online, pursuing a career change and acquiring
@@ -51,76 +52,85 @@
           refreshing bush walks, appreciating the beauty of the outdoors.
         </p>
       </div>
-    <!-- article-1 -->
-    <article class="box box-1">
-      <div class="heading">
-        <h2>My Menu</h2>
-        <p>CSS JavaScript</p>
+      <div id="work" class="work">
+        <h2>Work</h2>
       </div>
-      <a href="./my-restaurant-menu/index.html">
-        <img class="main" src="./images/my menu.png" alt="A fictional menu app"
-      /></a>
-    </article>
-    <!-- end article-1 -->
-    <!-- article-2 -->
-    <article class="box box-2">
-      <div class="heading">
-        <h2>Color Changer</h2>
-        <p>CSS javaScript</p>
-      </div>
-      <a href="./colorChanger/index.html"
-        ><img src="./images/color-changer.png" alt="color changing app" />
-      </a>
-    </article>
-    <!-- end article-2 -->
-    <!-- article-3 -->
-    <article class="box box-3">
-      <div class="heading">
-        <h2>Counter</h2>
-        <p>CSS JavaScript</p>
-      </div>
-      <a href="./counter/index.html">
-        <img src="./images/counter.png" alt="A counting app"
-      /></a>
-    </article>
-    <!-- end article-3 -->
-    <!-- article-4 -->
-    <article class="box box-4">
-      <div class="heading">
-        <h2>Love Calculator</h2>
-        <p>CSS javaScript</p>
-      </div>
-      <a href="./love-Calculator/index.html"
-        ><img src="./images/love calculator.png" alt="A love calculator app" />
-      </a>
-    </article>
-    <!-- end article-4 -->
-    <!-- article-5 -->
-    <article class="box box-5">
-      <div class="heading">
-        <h2>Coming Soon</h2>
-        <p>CSS javaScript</p>
-      </div>
-      <a href="#">
-        <img src="./images/coming soon.jpg" alt="coming soon red neon sign"
-      /></a>
-    </article>
-     <!-- footer -->
-     <h4>Contact Me</h4>
-    </section>
-      <footer>
-        <div id="contact" class="contact">
+      <!-- article-1 -->
+      <article class="box box-1">
+        <div class="heading">
+          <h2>My Menu</h2>
+          <p>CSS JavaScript</p>
         </div>
-        <ul>
-          <li>
-            <a
-              href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit"
-              >linkedIn</a
-            >
-          </li>
-          <li><a href="https://github.com/Tristenh">GitHub</a></li>
-          <li><a href="mailto:tristenhobba1@gmail.com">Email</a></li>
-        </ul>
-      </footer>
+        <a href="./my-restaurant-menu/index.html">
+          <img
+            class="main"
+            src="./images/my menu.png"
+            alt="A fictional menu app"
+        /></a>
+      </article>
+      <!-- end article-1 -->
+      <!-- article-2 -->
+      <article class="box box-2">
+        <div class="heading">
+          <h2>Color Changer</h2>
+          <p>CSS javaScript</p>
+        </div>
+        <a href="./colorChanger/index.html"
+          ><img src="./images/color-changer.png" alt="color changing app" />
+        </a>
+      </article>
+      <!-- end article-2 -->
+      <!-- article-3 -->
+      <article class="box box-3">
+        <div class="heading">
+          <h2>Counter</h2>
+          <p>CSS JavaScript</p>
+        </div>
+        <a href="./counter/index.html">
+          <img src="./images/counter.png" alt="A counting app"
+        /></a>
+      </article>
+      <!-- end article-3 -->
+      <!-- article-4 -->
+      <article class="box box-4">
+        <div class="heading">
+          <h2>Love Calculator</h2>
+          <p>CSS javaScript</p>
+        </div>
+        <a href="./love-Calculator/index.html"
+          ><img
+            src="./images/love calculator.png"
+            alt="A love calculator app"
+          />
+        </a>
+      </article>
+      <!-- end article-4 -->
+      <!-- article-5 -->
+      <article class="box box-5">
+        <div class="heading">
+          <h2>Coming Soon</h2>
+          <p>CSS javaScript</p>
+        </div>
+        <a href="#">
+          <img src="./images/coming soon.jpg" alt="coming soon red neon sign"
+        /></a>
+      </article>
+      <!-- end article-5 -->
+      <!-- footer -->
+      <h4>Contact Me</h4>
+    </section>
+    <footer>
+      <div id="contact" class="contact"></div>
+      <ul>
+        <li>
+          <a
+            href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit"
+            >linkedIn</a
+          >
+        </li>
+        <li><a href="https://github.com/Tristenh">GitHub</a></li>
+        <li><a href="mailto:tristenhobba1@gmail.com">Email</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
