added projects folders, updated links

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h2>My Menu</h2>
           <p>CSS JavaScript</p>
         </div>
-        <a href="./my-restaurant-menu/index.html">
+        <a href="./menu/index.html">
           <img
             class="main"
             src="./images/my menu.png"
@@ -75,7 +75,7 @@
           <h2>Color Changer</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./colorChanger/index.html"
+        <a href="./color/index.html"
           ><img src="./images/color-changer.png" alt="color changing app" />
         </a>
       </article>
@@ -86,7 +86,7 @@
           <h2>Counter</h2>
           <p>CSS JavaScript</p>
         </div>
-        <a href="./counter/index.html">
+        <a href="./stopwatch/index.html">
           <img src="./images/counter.png" alt="A counting app"
         /></a>
       </article>
@@ -97,7 +97,7 @@
           <h2>Love Calculator</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./love-Calculator/index.html"
+        <a href="./love/index.html"
           ><img
             src="./images/love calculator.png"
             alt="A love calculator app"
