changed h2,h4 styles, removed resume link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <li><a href="#about">About Me</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contact Me</a></li>
-        <li><a href="./Resume/index.html">Resume</a></li>
       </ul>
     </nav>
     <!-- hero -->
@@ -27,7 +26,7 @@
         src="./images/profile.jpg"
         alt="A profile picture of Tristen Hobba with headphones on"
       />
-      <div class="subtitle"><h2>Tristen Hobba</h2></div>
+      <div class="subtitle"><h2>Professional Portfolio</h2></div>
     </div>
     <!-- about me -->
     <section class="grid-control">
@@ -117,7 +116,7 @@
       </article>
       <!-- end article-5 -->
       <!-- footer -->
-      <h4>Contact Me</h4>
+      <h4 class="aboutMe">Contact Me</h4>
     </section>
     <footer>
       <div id="contact" class="contact"></div>
