--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </div>
     <!-- about me -->
     <section class="grid-control">
-      <h2 class="aboutMe">About me</h2>
-      <div id="about" class="about">
+      <h2 id="about" class="aboutMe">About me</h2>
+      <div class="about">
         <p>
           Welcome to my profile! I am currently enrolled in the coding bootcamp
           at Sydney University Online, pursuing a career change and acquiring
