--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <!-- about me -->
     <section class="grid-control">
-      <h2 id="about" class="aboutMe">About me</h2>
+      <h2 id="about" class="section-h2">About me</h2>
       <div class="about">
         <p>
           Welcome to my profile! I am currently enrolled in the coding bootcamp
@@ -51,7 +51,7 @@
           refreshing bush walks, appreciating the beauty of the outdoors.
         </p>
       </div>
-      <div id="work" class="work">
+      <div id="work" class="section-h2 work">
         <h2>Work</h2>
       </div>
       <!-- article-1 -->
@@ -116,7 +116,7 @@
       </article>
       <!-- end article-5 -->
       <!-- footer -->
-      <h4 class="aboutMe">Contact Me</h4>
+      <h4 class="section-h2">Contact Me</h4>
     </section>
     <footer>
       <div id="contact" class="contact"></div>
