put footer h4 in grid, styled grid, styled h2 h4, moved footer upwards

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <!-- about me -->
     <section class="grid-control">
-      <h2 id="about" class="section-h2">About me</h2>
+      <h2 id="about" class="section-h2">About Me</h2>
       <div class="about">
         <p>
           Welcome to my profile! I am currently enrolled in the coding bootcamp
@@ -51,9 +51,7 @@
           refreshing bush walks, appreciating the beauty of the outdoors.
         </p>
       </div>
-      <div id="work" class="section-h2 work">
-        <h2>Work</h2>
-      </div>
+      <h2 class="section-h2 work">Work</h2>
       <!-- article-1 -->
       <article class="box box-1">
         <div class="heading">
@@ -116,9 +114,9 @@
       </article>
       <!-- end article-5 -->
       <!-- footer -->
+      <h4 class="section-h2">Contact Me</h4>
     </section>
     <footer>
-      <h4 class="section-h2">Contact Me</h4>
       <ul>
         <li>
           <a
