--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           refreshing bush walks, appreciating the beauty of the outdoors.
         </p>
       </div>
-      <h2 class="section-h2 work">Work</h2>
+      <h2 id="work" class="section-h2 work">Work</h2>
       <!-- article-1 -->
       <article class="box box-1">
         <div class="heading">
@@ -114,7 +114,7 @@
       </article>
       <!-- end article-5 -->
       <!-- footer -->
-      <h4 class="section-h2">Contact Me</h4>
+      <h4 id="contact" class="section-h2">Contact Me</h4>
     </section>
     <footer>
       <ul>
