added Travel explorer app to my portfolio

--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
       <!-- article-1 -->
       <article class="box box-1">
         <div class="heading">
-          <h2>My Menu</h2>
-          <p>CSS JavaScript</p>
+          <h2>Travel-Eplorer</h2>
+          <p>CSS javaScript</p>
         </div>
-        <a href="./menu/index.html">
+        <a href="./Travel-explorer/index.html">
           <img
             class="main"
-            src="./images/my menu.png"
-            alt="A fictional menu app"
+            src="./Travel-explorer/screenshots/Map display.jpg"
+            alt="Travel explorer"
         /></a>
       </article>
+
       <!-- end article-1 -->
       <!-- article-2 -->
       <article class="box box-2">
@@ -105,11 +106,11 @@
       <!-- article-5 -->
       <article class="box box-5">
         <div class="heading">
-          <h2>Coming Soon</h2>
-          <p>CSS javaScript</p>
+          <h2>My Menu</h2>
+          <p>CSS JavaScript</p>
         </div>
-        <a href="#">
-          <img src="./images/coming soon.jpg" alt="coming soon red neon sign"
+        <a href="./menu/index.html">
+          <img src="./images/my menu.png" alt="A fictional menu app"
         /></a>
       </article>
       <!-- end article-5 -->
