added Travel explorer app the portfolio

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
           <h2>Travel-Eplorer</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./Travel-explorer/index.html">
+        <a href="./Travel-Explorer/index.html">
           <img
             class="main"
-            src="./Travel-explorer/screenshots/Map display.jpg"
+            src="./Travel-Explorer/screenshots/Map display.jpg"
             alt="Travel explorer"
         /></a>
       </article>
