added 5 day weather forcast app to portfolio, update gitmodule, remove lovecalculator app

--- a/index.html
+++ b/index.html
@@ -65,19 +65,23 @@
             alt="Travel explorer"
         /></a>
       </article>
-
       <!-- end article-1 -->
+
       <!-- article-2 -->
-      <article class="box box-2">
+      <article class="box box-4">
         <div class="heading">
-          <h2>Color Changer</h2>
+          <h2>Love Calculator</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./color/index.html"
-          ><img src="./images/color-changer.png" alt="color changing app" />
+        <a href="./5-day-weather-forecast/index.html"
+          ><img
+            src="./images/5dayweather.png"
+            alt="5 day weather forcast application"
+          />
         </a>
       </article>
       <!-- end article-2 -->
+
       <!-- article-3 -->
       <article class="box box-3">
         <div class="heading">
@@ -89,20 +93,19 @@
         /></a>
       </article>
       <!-- end article-3 -->
+
       <!-- article-4 -->
-      <article class="box box-4">
+      <article class="box box-2">
         <div class="heading">
-          <h2>Love Calculator</h2>
+          <h2>Color Changer</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./love/index.html"
-          ><img
-            src="./images/love calculator.png"
-            alt="A love calculator app"
-          />
+        <a href="./color/index.html"
+          ><img src="./images/color-changer.png" alt="color changing app" />
         </a>
       </article>
       <!-- end article-4 -->
+
       <!-- article-5 -->
       <article class="box box-5">
         <div class="heading">
@@ -114,6 +117,7 @@
         /></a>
       </article>
       <!-- end article-5 -->
+
       <!-- footer -->
       <h4 id="contact" class="section-h2">Contact Me</h4>
     </section>
