added work day scheduler to porfolio, removed color app

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- article-2 -->
       <article class="box box-4">
         <div class="heading">
-          <h2>Love Calculator</h2>
+          <h2>5 day weather forcast</h2>
           <p>CSS javaScript</p>
         </div>
         <a href="./5-day-weather-forecast/index.html"
@@ -97,11 +97,11 @@
       <!-- article-4 -->
       <article class="box box-2">
         <div class="heading">
-          <h2>Color Changer</h2>
+          <h2>work day scheduler</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./color/index.html"
-          ><img src="./images/color-changer.png" alt="color changing app" />
+        <a href="./work-day-scheduler/index.html"
+          ><img src="./images/work day .png" alt="work day scheduler" />
         </a>
       </article>
       <!-- end article-4 -->
