add Tristens-Coding_quiz and rock-paper-scissors to portfolio

--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
       <!-- article-3 -->
       <article class="box box-3">
         <div class="heading">
-          <h2>Counter</h2>
+          <h2>Rock paper scissors</h2>
           <p>CSS JavaScript</p>
         </div>
-        <a href="./stopwatch/index.html">
-          <img src="./images/counter.png" alt="A counting app"
+        <a href="./rock-paper-scissors/index.html">
+          <img
+            src="./images/rock-paper-scissors.png"
+            alt="A game of rock paper scissors against the pc"
         /></a>
       </article>
       <!-- end article-3 -->
@@ -100,7 +102,7 @@
           <h2>work day scheduler</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./work-day-scheduler/index.html"
+        <a href="./rock-paper-scissors\index.html"
           ><img src="./images/work day .png" alt="work day scheduler" />
         </a>
       </article>
@@ -109,11 +111,11 @@
       <!-- article-5 -->
       <article class="box box-5">
         <div class="heading">
-          <h2>My Menu</h2>
+          <h2>Tristens coding quiz</h2>
           <p>CSS JavaScript</p>
         </div>
-        <a href="./menu/index.html">
-          <img src="./images/my menu.png" alt="A fictional menu app"
+        <a href="./Tristens-Coding-Quiz/index.html">
+          <img src="./images/coding quiz.png" alt="A interactive coding quiz"
         /></a>
       </article>
       <!-- end article-5 -->
