--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h2>work day scheduler</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./work-day-scheduler\index.html"
+        <a href="./work-day-scheduler/index.html"
           ><img src="./images/work day .png" alt="work day scheduler" />
         </a>
       </article>
