updated featired apps

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       <!-- article-1 -->
       <article class="box box-1">
         <div class="heading">
-          <h2>Travel-Eplorer</h2>
+          <h2>You RecipeBook</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./Travel-Explorer/index.html">
+        <a href="https://your-recipe-book-985222554f68.herokuapp.com/">
           <img
             class="main"
-            src="./Travel-Explorer/screenshots/Map display.jpg"
+            src="./images/your-recipe-book.png"
             alt="Travel explorer"
         /></a>
       </article>
@@ -73,7 +73,7 @@
           <h2>5 day weather forcast</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./5-day-weather-forecast/index.html"
+        <a href="https://tristenh.github.io/5-day-weather-forecast/"
           ><img
             src="./images/5dayweather.png"
             alt="5 day weather forcast application"
@@ -85,13 +85,14 @@
       <!-- article-3 -->
       <article class="box box-3">
         <div class="heading">
-          <h2>Rock paper scissors</h2>
-          <p>CSS JavaScript</p>
+          <h2>Travel-Eplorer</h2>
+          <p>CSS javaScript</p>
         </div>
-        <a href="./rock-paper-scissors/index.html">
+        <a href="https://allenhirmiz.github.io/Travel-Explorer/">
           <img
-            src="./images/rock-paper-scissors.png"
-            alt="A game of rock paper scissors against the pc"
+            class="main"
+            src="./Travel-Explorer/screenshots/Map display.jpg"
+            alt="Travel explorer"
         /></a>
       </article>
       <!-- end article-3 -->
@@ -102,7 +103,7 @@
           <h2>work day scheduler</h2>
           <p>CSS javaScript</p>
         </div>
-        <a href="./work-day-scheduler/index.html"
+        <a href="https://tristenh.github.io/work-day-scheduler/"
           ><img src="./images/work day .png" alt="work day scheduler" />
         </a>
       </article>
@@ -114,7 +115,7 @@
           <h2>Tristens coding quiz</h2>
           <p>CSS JavaScript</p>
         </div>
-        <a href="./Tristens-Coding-Quiz/index.html">
+        <a href="https://tristenh.github.io/Tristens-Coding-Quiz/">
           <img src="./images/coding quiz.png" alt="A interactive coding quiz"
         /></a>
       </article>
