--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
         </div>
         <a href="https://allenhirmiz.github.io/Travel-Explorer/">
           <img
-            class="main"
             src="./Travel-Explorer/screenshots/Map display.jpg"
             alt="Travel explorer"
         /></a>
@@ -104,7 +103,7 @@
           <p>CSS javaScript</p>
         </div>
         <a href="https://tristenh.github.io/work-day-scheduler/"
-          ><img src="./images/work day .png" alt="work day scheduler" />
+          ><img src="./images/work-day.png" alt="work day scheduler" />
         </a>
       </article>
       <!-- end article-4 -->
